# AI-Interface-Actions

./: .env.example  .env.local  .gitignore  .replit  Dockerfile  Dockerfile.render  EXTRACT_SESSION_GUIDE.md  RAILWAY_DEPLOYMENT.md  README.md  debug_replit.py  diagnose_double_requests.py  docker-compose.yml  install.sh  install_manual.py  package.json  pyproject.toml  railway.yml  render.yaml  replit.nix  requirements.txt  run_local.py  session_state.json  setup_paperspace.sh  setup_session.py  start-railway.sh  start-render.sh  start_api_for_testing.py  start_replit.py  start_simple.py  supervisord.conf  test_clipboard_workaround.py  test_double_send.py  test_new_zip_url.sh  test_quick_debug.py  test_real_zip.py  test_real_zip_curl.sh  test_selector_fix.py  test_session_vars.py  test_step_by_step.py  test_upload_curl.sh  (+3 more)
.codesandbox/: tasks.json
ai_interface_actions/: __init__.py  admin_routes.py  admin_web.py  api.py  browser_automation.py  config.py  credentials_client.py  main.py  models.py  task_manager.py  zip_downloader.py
scripts/: install.sh  test.py  test_visible.py
